--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -61,9 +61,7 @@
       margin: 30px auto;
     }
 
-    .dropdown {
-      position: relative;
-    }
+    .dropdown { position: relative; }
 
     .dropbtn {
       background: rgba(255,255,255,0.9);
@@ -96,9 +94,7 @@
       border-bottom: 1px solid #ddd;
     }
 
-    .dropdown.show .dropdown-content {
-      display: block;
-    }
+    .dropdown.show .dropdown-content { display: block; }
 
     .calendar-overlay {
       display: none;
@@ -243,8 +239,8 @@
   };
 
   const soalWaktuKhusus = {
-    tanggal: "2026-02-08",
-    waktu: "16:15",
+    tanggal: "2026-02-10",
+    waktu: "07:00",
     link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi"
   };
 
