--- a/kelas-5/tugas/matematika/tugas_matematika.html
+++ b/kelas-5/tugas/matematika/tugas_matematika.html
@@ -170,7 +170,7 @@
   </div>
   <div class="nav-right">
     <a href="../../index.html">🏠 Beranda</a>
-    <a href="tugas.html">◀️ Kembali</a>
+    <a href="https://sdn160gresik.github.io/UPT-SD-NEGERI-160-GRESIK/kelas-5/tugas/tugas.html">◀️ Kembali</a>
     <a href="#">🖼️ Galeri</a>
   </div>
 </nav>
@@ -248,4 +248,3 @@
 
 </body>
 </html>
-
