--- a/kelas-5/tugas/matematika/tugas_matematika.html
+++ b/kelas-5/tugas/matematika/tugas_matematika.html
@@ -61,9 +61,7 @@
       margin: 30px auto;
     }
 
-    .dropdown {
-      position: relative;
-    }
+    .dropdown { position: relative; }
 
     .dropbtn {
       background: rgba(255,255,255,0.9);
@@ -85,7 +83,6 @@
       min-width: 230px;
       margin-top: 5px;
       box-shadow: 0 6px 12px rgba(0,0,0,0.25);
-      z-index: 10;
     }
 
     .dropdown-content a {
@@ -97,9 +94,7 @@
       border-bottom: 1px solid #ddd;
     }
 
-    .dropdown.show .dropdown-content {
-      display: block;
-    }
+    .dropdown.show .dropdown-content { display: block; }
 
     .calendar-overlay {
       display: none;
@@ -174,8 +169,8 @@
 </div>
 
 <div class="task-container">
-  <div class="dropdown" id="dropdownTugas">
-    <button class="dropbtn" id="btnDropdown">📅 Pilih Tugas</button>
+  <div class="dropdown">
+    <button class="dropbtn">📅 Pilih Tugas</button>
     <div class="dropdown-content">
       <a href="#">Rabu, 12 November 2025</a>
       <a href="#">Selasa, 25 November 2025</a>
@@ -195,36 +190,31 @@
 <div class="pesan-melayang" id="pesanMelayang"></div>
 
 <script>
-  const dropdown = document.getElementById("dropdownTugas");
-  const btnDropdown = document.getElementById("btnDropdown");
+  const dropdown = document.querySelector(".dropdown");
+  const dropbtn = document.querySelector(".dropbtn");
   const tugasLain = document.getElementById("tugasLain");
   const overlay = document.getElementById("calendarOverlay");
   const calendarPopup = document.getElementById("calendarPopup");
   const calendarInput = document.getElementById("calendarInput");
   const pesan = document.getElementById("pesanMelayang");
 
-  // === DROPDOWN PILIH TUGAS ===
-  btnDropdown.onclick = function (e) {
+  const waktuTugas = new Date(2026, 1, 10, 7, 1, 0);
+  const linkTugas = "https://nurchintapembatik.my.canva.site/matematika-ciri-ciri-segitiga";
+
+  dropbtn.onclick = e => {
     e.stopPropagation();
     dropdown.classList.toggle("show");
   };
 
-  window.onclick = function () {
-    dropdown.classList.remove("show");
-  };
-
-  // ⏰ WAKTU RESMI TUGAS
-  const waktuTugas = new Date(2026, 1, 10, 7, 1, 0);
-  const linkTugas = "https://nurchintapembatik.my.canva.site/matematika-ciri-ciri-segitiga";
-
-  tugasLain.onclick = function (e) {
+  tugasLain.onclick = e => {
     e.preventDefault();
+    e.stopPropagation();
     dropdown.classList.remove("show");
     overlay.style.display = "block";
     calendarPopup.style.display = "block";
   };
 
-  overlay.onclick = function () {
+  overlay.onclick = () => {
     overlay.style.display = "none";
     calendarPopup.style.display = "none";
     pesan.style.display = "none";
@@ -262,6 +252,16 @@
       `;
       pesan.style.display = "block";
     }
+  };
+
+  window.onclick = () => {
+    dropdown.classList.remove("show");
+    pesan.style.display = "none";
+  };
+
+  pesan.onclick = e => {
+    e.stopPropagation();
+    pesan.style.display = "none";
   };
 </script>
 
